@@ -5,7 +5,7 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)cpio.sl	2.6 (gritter) 2/14/09";
+static const char sccsid[] USED = "@(#)cpio.sl	2.7 (gritter) 8/13/09";
 /* SLIST */
 /*
 blast.c: * Sccsid @(#)blast.c	1.2 (gritter) 2/17/04
@@ -18,9 +18,9 @@ explode.c: * Sccsid @(#)explode.c	1.6 (gritter) 9/30/03
 flags.c:	Sccsid @(#)flags.c	1.6 (gritter) 3/26/07	
 inflate.c: * Sccsid @(#)inflate.c	1.6 (gritter) 10/13/04
 nonpax.c:	Sccsid @(#)nonpax.c	1.1 (gritter) 2/24/04	
-pax.c:static const char sccsid[] USED = "@(#)pax_su3.sl	1.26 (gritter) 6/26/05";
-pax.c:static const char sccsid[] USED = "@(#)pax.sl	1.26 (gritter) 6/26/05";
-pax.c:	Sccsid @(#)pax.c	1.26 (gritter) 6/26/05	
+pax.c:static const char sccsid[] USED = "@(#)pax_su3.sl	1.27 (gritter) 8/13/09";
+pax.c:static const char sccsid[] USED = "@(#)pax.sl	1.27 (gritter) 8/13/09";
+pax.c:	Sccsid @(#)pax.c	1.27 (gritter) 8/13/09	
 unshrink.c: * Sccsid @(#)unshrink.c	1.4 (gritter) 6/18/04
 unzip.h: * Sccsid @(#)unzip.h	1.5 (gritter) 7/16/04
 */
